--- a/user/package.json
+++ b/user/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "generate": "graphql-codegen --config codegen.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@apollo/server": "^4.1.1",
     "graphql-tag": "^2.12.6",
     "ts-node": "^10.9.1",
